Onglet Service, stockages perso, securite et mises a jour multiplateformes
Sources
- Onglet "Serveur" renomme "Service" : accueille desormais tous les stockages.
- Client S3 (SigV4 ecrit a la main) : S3, R2, B2 et tout compatible. Assistant
  en deux etapes — test de connexion, puis choix des dossiers a indexer.
- Indexeur de bucket : les titres rejoignent l accueil avec leurs metadonnees
  TMDB. Les dossiers HLS d un bucket prive sont lus via le proxy local, qui
  signe chaque segment a la volee.
- Clients WebDAV et FTP, avec navigation et lecture.
- Export/import d une configuration de stockage par QR code.

Securite
- Coffre chiffre .lmn (AES-256-GCM, en-tete authentifie, nonce par ecriture).
- Cle detenue par le magasin de cles du systeme, StrongBox si disponible ;
  second niveau a mot de passe maitre, cle en memoire vive uniquement.
- Jetons Jellyfin et addons migres automatiquement, puis effaces du clair.
- Frein exponentiel sur les essais, zeroisation, comparaisons a duree constante.

Mises a jour
- Installation reelle sur PC : l app se ferme, s installe et se relance.
- Mises a jour Android par le meme bandeau, sans cable ni ADB.
- Signature APK figee par local.properties ; purge des versions obsoletes.

Corrections
- Le retour Android quittait l application.
- Fiche film illisible sur ecran etroit : bandeau a hauteur fixe que son
  contenu debordait, boutons invisibles mais cliquables.
- Marges laterales adaptees a la taille de l ecran.
- Ressources absentes de l APK (crash au lancement) : le declencheur de copie
  visait un nom de tache inexistant.
- Trafic http en clair autorise sur Android : avatars et serveur de MAJ.
- Dossiers HLS locaux : chemins contenant des espaces enfin lus.
- Section Qualite du lecteur : etat reel affiche, et message franc quand la
  source ne peut pas etre transcodee.